--- a/front/src/App.css
+++ b/front/src/App.css
@@ -41,3 +41,11 @@
   color: #888;
 }
 
+.inputForm {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border: 2px solid red;
+  border-radius: 10px;
+  padding: 10px 0px 10px 0px;
+}
